# project

./: README.md  alembic.ini  erp.db  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: .keep
app/: main.py
app/api/: deps.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  department.py  organization.py  role.py  user.py
app/routes/: organization.py  roles.py  users.py
app/schemas/: organization.py  role.py  user.py
app/services/: organization_service.py  role_service.py  user_service.py
frontend/: index.html  org.html
tests/: conftest.py  test_organization.py
