[project]
name = "erpproject"
version = "0.1.0"
description = "ERP skeleton using FastAPI, SQLAlchemy, Alembic"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pytest>=8.0",
    "email-validator>=2.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
